# ClaPP

./: CMakeLists.txt  LICENSE  README.md
clapp_scripts/: PlayerBinds.lua
clapp_scripts/meshes/: CubeMesh.lua  TriangleMesh.lua
clapp_shaders/: fragShader.txt  vertShader.txt
clapp_src/: CGL.cpp  CGL_Mesh.cpp  CGL_Shader.cpp  CGL_System.cpp  CGL_Texture.cpp  CIL_PlayerControllerSystem.cpp  CIL_System.cpp  CPL_System.cpp  Clarity_Clock.cpp  Clarity_Component.cpp  Clarity_ECS.cpp  Clarity_Engine.cpp  Clarity_EventManager.cpp  Clarity_IO.cpp  Clarity_LUA.cpp  Clarity_Memory.cpp  clapp_stb.cpp  main.cpp
clapp_src/clapp_includes/: CGL.h  CGL_Mesh.h  CGL_Shader.h  CGL_System.h  CGL_Texture.h  CIL_Controller.h  CIL_Inputs.h  CIL_PlayerControllerSystem.h  CIL_System.h  CPL_Physics.h  CPL_System.h  CPL_Transform.h  Clairty_Clock.h  Clarity_Component.h  Clarity_ECS.h  Clarity_Engine.h  Clarity_Entity.h  Clarity_EventManager.h  Clarity_IO.h  Clarity_LUA.h  Clarity_Library.h  Clarity_Memory.h  Clarity_System.h  g_pch.h  pch.h
clapp_src/clapp_unittests/: clapp_ut.h  clapp_ut_file.h  clapp_ut_fileio.cpp  clapp_ut_main.cpp
